# Leetcode-exercises

./: .coverage  .gitignore  404.html  README.md  coverage.xml  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: deploy-docs.yml  format_and_create_pr.yml  format_and_update_pr.yml  lint_and_test_cov.yml  lint_and_update_pr.yml  test-and-update-docs.yml  test_coverage_in_readme.yml
ArrayExercise/Best Time to Buy and Sell Stock II /: BestTimetoBuyandSellStockII.py  README.md
ArrayExercise/Best_Time_to_Buy_and_Sell_Stock_II/: BestTimetoBuyandSellStockII.py
ArrayExercise/Contains Duplicate/: README.md  containsDuplicate.py
ArrayExercise/Contains_Duplicate/: containsDuplicate.py
ArrayExercise/Height_Checker/: README.md  heightChecker.py
ArrayExercise/Intersection of Two Arrays II/: README.md
ArrayExercise/Intersection_of_Two_Arrays_II/: intersectionOfTwoArrays.py
ArrayExercise/Max Consecutive Ones/: MaxConsecutiveOnes.py
ArrayExercise/Max_Consecutive_Ones/: MaxConsecutiveOnes.py  README.md
ArrayExercise/Move Zeroes/: moveZeros.py
ArrayExercise/Move_Zeroes/: README.md  moveZeros.py
ArrayExercise/Plus One/: plusOne.py
ArrayExercise/Plus_One/: README.md  plusOne.py
ArrayExercise/Remove Duplicates from Sorted Array /: duplicateItemLeetcodeSolution.py  (+1 more)
data/: pytest-coverage_4.txt
leetcode_exercises.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
search/: search_index.json
src/: index.md  template.md
template/: index.html
test_data/: pytest-coverage.txt
tests/: test_BinarySearchTree.py
(+322 files in other folders)
