[project]
name = "leetcode-exercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=23.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "pytest>=6.0",
    "pytest-cov>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
